Fix define of audio files

--- a/audioplayer/audioplayer.csproj
+++ b/audioplayer/audioplayer.csproj
@@ -9,10 +9,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="audios\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="NAudio" Version="2.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="audios\audio1.flac">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="audios\audio2.flac">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
