Make windows-audio-player CI to support new branch name

--- a/.github/workflows/windows-audio-player-ci.yml
+++ b/.github/workflows/windows-audio-player-ci.yml
@@ -2,9 +2,9 @@ name: windows-audio-player CI
 
 on:
   push:
-    branches: [ master, windows-audio-player ]
+    branches: [ master, windows-audio-player/master ]
   pull_request:
-    branches: [ master, windows-audio-player ]
+    branches: [ master, windows-audio-player/master ]
   workflow_dispatch:
 
 jobs:
